2056 - fix bouncing avatar going offscreen, avatar click disable while bouncing

--- a/src/style/styles.less
+++ b/src/style/styles.less
@@ -894,6 +894,10 @@ div.section.info {
 	cursor: help;
 }
 
+.vignette.bouncing {
+	pointer-events: none;
+}
+
 /*-----------Pause Overlay-------------*/
 /* Pause has been disabled from game */
 #pause {
